Tue Jul 19 16:07:45 2011  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_update_max_fd): new function.

	* internal.h (rb_update_max_fd): declare rb_update_max_fd.

	* thread_pthread.c (rb_thread_create_timer_thread): update max fd when
	  timer thread pipe is created.

Mon Jul 18 13:36:47 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: define a new BadAlias error class.

	* ext/psych/lib/psych/visitors/to_ruby.rb: raise an exception when
	  deserializing an alias that does not exist.

	* test/psych/test_merge_keys.rb: corresponding test.

Mon Jul 18 00:00:46 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* ext/curses/curses.c: added the new class Curses::Pad, which
	  supports scrolling.  patch by Eric Hodel.  [Feature #4896]
	  [ruby-core:37206]

Sun Jul 17 16:26:40 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_check_trusted): new function to check an object is
	  trusted.

	* struct.c (rb_struct_modify), time.c (time_modify): check by the
	  above function to show proper class names.  [Bug #5036]

Sun Jul 17 15:30:04 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_warn_m): accept multiple args in like puts.  rdoc
	  patch by Erik Price at [ruby-core:38119].  [Feature #5029]

Sun Jul 17 07:56:31 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_ssl_session.rb: add PEM SSL session without TLS
	  extensions. Use this as the default for the tests to ensure
	  compatibility with OpenSSL 0.9.7.
	  [ Ruby 1.9 - Bug #4961 ] [ruby-core:37726]

Sat Jul 16 17:29:20 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_UNIVERSAL_ARCH): restore arch flag.
	  Bug #4977

Sat Jul 16 06:27:51 2011  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/uri/common.rb (module): Remove optional parser argument to
	  Kernel#URI
	  [ruby-core:38061]
	
	* lib/uri/generic.rb (module): ditto

Sat Jul 16 03:19:45 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
